--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jeffcheung2015.github.io/reactproductslist",
   "dependencies": {
+    "gh-pages": "^2.1.1",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-star-rating-component": "^1.4.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
